# rsfn4py

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: dispatch-release.yml  release.yml  test.yml
python/rsfn4py/: __init__.py  validations.py
scripts/: benchmark.py
src/: lib.rs
tests/: test_validations.py
